--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 plugins {
-//    id 'com.android.application'
-    id 'com.android.library'
+    id 'com.android.application'
+//    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    namespace 'com.kmasan.audiosensor'
+    namespace 'com.kmasan.audiosample'
     compileSdk 33
 
     defaultConfig {
-//        applicationId "com.kmasan.audiosensor"
+        applicationId "com.kmasan.audiosensor"
         minSdk 26
         targetSdk 33
         versionCode 1
