--- a/audioSensor/build.gradle
+++ b/audioSensor/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.github.kmasan'
 ext{
-    lib_version = '0.2'
+    lib_version = '0.3'
 }
 
 android {
@@ -28,11 +28,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
 
     publishing {
