--- a/audioSensor/build.gradle
+++ b/audioSensor/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.github.kmasan'
 ext{
-    lib_version = '0.3'
+    lib_version = '1.0'
 }
 
 android {
@@ -83,7 +83,7 @@ publishing {
 
                 licenses {
                     license {
-                        name = 'kmasan'
+                        name = 'Apache License Version 2.0'
                     }
                 }
             }
